<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostarProducto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/botonEscuchar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickEscuchar"
            android:text="@string/boton_escuchar" />

        <Button
            android:id="@+id/botonParar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickPararAudio"
            android:text="@string/boton_parar"
            android:visibility="gone" />

        <Button
            android:id="@+id/botonReproducir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickReproducir"
            android:text="@string/boton_reproducir"
            android:visibility="gone" />

        <Button
            android:id="@+id/botonInformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickLlamar"
            android:text="@string/boton_informacion" />

    </LinearLayout>
</ScrollView>