<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="123dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/nombreInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_inicio"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/playfair_bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/nombreOkInicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/passInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_inicio"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/playfair_bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/nombreOkInicio2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreOkInicio" />

    <EditText
        android:id="@+id/nombreOkInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/playfair_regular"
        app:layout_constraintBottom_toTopOf="@+id/passInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreInicio" />

    <EditText
        android:id="@+id/passOkInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/playfair_regular"
        app:layout_constraintBottom_toTopOf="@+id/botonLoguear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passInicio" />

    <Button
        android:id="@+id/botonLoguear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loguear_inicio"
        android:fontFamily="@font/playfair_sc_bold"
        android:onClick="clickIncioSesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreOkInicio2" />

</androidx.constraintlayout.widget.ConstraintLayout>